create places rising

--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -16,6 +16,14 @@
           <button class="ui button" data-action="signUp">S'enregistrer</button>
         </div>
         {{/unless}}
+        <hr>
+        <p>
+          Commerçants, utilisez notre service.
+        </p>
+        <p>
+          C'est gratuit pour toujours.
+        </p>
+        <button class="ui button" data-action="createPlace">Inscrivez votre commerce</button>
       </div>
     </div>
 
