monday night sprint

--- a/client/main.css
+++ b/client/main.css
@@ -13,3 +13,6 @@ body, .pusher, .container {
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
+.top.menu .item {
+  cursor: pointer;
+}
