--- a/client/templates/_comons/header/header_template.html
+++ b/client/templates/_comons/header/header_template.html
@@ -11,8 +11,8 @@
       <i class="big sign in icon"></i>
     </div>
     {{else}}
-    <div class="right item" data-action="signOut">
-      <i class="big sign out icon"></i>
+    <div class="right item" data-action="profile">
+      <i class="big user icon"></i>
     </div>
     {{/unless}}
   </div>
