--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -1,7 +1,7 @@
 <template name='home'>
 
     <div class="ui basic segment">
-      <div class="ui raised center aligned segment">
+      <div class="ui stacked center aligned segment">
         <h2>Gérez vos avoirs et vos cartes de fidélité</h2>
         <p>
           Pour ne plus avoir de petits papiers ni de cartes perdus dans votre porte monnaye.
