--- a/client/templates/createPlace/createPlace_template.html
+++ b/client/templates/createPlace/createPlace_template.html
@@ -1,8 +1,6 @@
 <template name='createPlace'>
   <div class="ui segment basic">
-    <div class="ui fluid big icon input">
-      <input type="text" placeholder="Tapez l'adresse de votre commerce" id="autocomplete">
-      <i class="search icon"></i>
-    </div>
+    <h2>Inscrivez votre commerce</h2>
+    {{> quickForm id="createPlace" type="insert" collection="Places" enctype="multipart/form-data" doc=this buttonContent="Enregistrer"}}
   </div>
 </template>
