--- a/client/templates/createPlace/createPlace_template.html
+++ b/client/templates/createPlace/createPlace_template.html
@@ -1,5 +1,5 @@
 <template name='createPlace'>
-  <div class="ui segment basic">
+  <div class="ui container">
     <h2>Inscrivez votre commerce</h2>
     {{> quickForm id="createPlace" type="insert" collection="Places" enctype="multipart/form-data" doc=this buttonContent="Enregistrer"}}
   </div>
