--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -1,30 +1,27 @@
 <template name='home'>
-
-    <div class="ui basic segment">
-      <div class="ui stacked center aligned segment">
-        <h2>Gérez vos avoirs et vos cartes de fidélité</h2>
-        <p>
-          Pour ne plus avoir de petits papiers ni de cartes perdus dans votre porte monnaye.
-        </p>
-        {{#unless isConnected}}
-        <p>
-          Vous devez d'abord vous connecter.
-        </p>
-        <div class="ui buttons">
-          <button class="ui button" data-action="signIn">Se connecter</button>
-          <div class="or" data-text="ou"></div>
-          <button class="ui button" data-action="signUp">S'enregistrer</button>
-        </div>
-        {{/unless}}
-        <hr>
-        <p>
-          Commerçants, utilisez notre service.
-        </p>
-        <p>
-          C'est gratuit pour toujours.
-        </p>
-        <button class="ui button" data-action="createPlace">Inscrivez votre commerce</button>
+  <div class="ui container">
+    <div class="ui stacked center aligned segment">
+      <h3>Gérez vos avoirs et vos cartes de fidélité</h3>
+      <p>
+        Pour ne plus avoir de petits papiers ni de cartes perdus dans votre porte monnaye.
+      </p>
+      {{#unless isConnected}}
+      <p>
+        Vous devez d'abord vous connecter.
+      </p>
+      <div class="ui buttons">
+        <button class="ui button" data-action="signIn">Se connecter</button>
+        <div class="or" data-text="ou"></div>
+        <button class="ui button" data-action="signUp">S'enregistrer</button>
       </div>
+      {{/unless}}
     </div>
-
+    <div class="ui stacked center aligned segment">
+      <h3>Commerçants, utilisez notre service.</h3>
+      <p>
+        C'est gratuit pour toujours.
+      </p>
+      <button class="ui button" data-action="createPlace">Inscrivez votre commerce</button>
+    </div>
+  </div>
 </template>
