--- a/client/templates/placeEdit/placeEdit_template.html
+++ b/client/templates/placeEdit/placeEdit_template.html
@@ -1,7 +1,10 @@
 <template name='placeEdit'>
   <div class="ui container">
-    <h2>Editez {{name}}</h2>
+    {{> image imageId=imageId classNames='small right floated'}}
+    {{> imageEdit imageId=imageId}}
+    <h2>Editer : {{name}}</h2>
     {{> quickForm id="editPlace" type="update" collection="Places" enctype="multipart/form-data" doc=this buttonContent="Enregistrer"}}
     <button class="negative ui right floated button" data-action="deletePlace">Supprimer</button>
   </div>
+
 </template>
