--- a/client/templates/profile/profile_template.html
+++ b/client/templates/profile/profile_template.html
@@ -4,29 +4,10 @@
     <p>
       {{email}}
     </p>
+    {{> QrCode text=qrText }}
+    <br>
     <button class="ui red button" data-action="logout">
       Se déconnecter
     </button>
-    {{#if myPlaces}}
-    <h3>Mes commerces</h3>
-    <div class="ui link cards">
-    {{#each myPlaces}}
-      <a class="card" href="{{pathFor 'place' placeId=_id}}">
-        <div class="image" >
-          {{> image imageId=imageId}}
-        </div>
-        <div class="content">
-          <div class="header">{{name}}</div>
-          <div class="meta">
-            <span class="date">Créé le {{formatDate createdAt}} {{#if updatedAt}}(mis à jours {{fromNow updatedAt}}){{/if}}</span>
-          </div>
-          <div class="description">
-            {{description}}
-          </div>
-        </div>
-      </a>
-    {{/each}}
-    </div>
-    {{/if}}
   </div>
 </template>
