--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -1,10 +1,13 @@
 <template name='home'>
   <div class="ui container">
     <div class="ui stacked center aligned segment">
-      <h3>Gérez vos avoirs et vos cartes de fidélité</h3>
-      <p>
-        Pour ne plus avoir de petits papiers ni de cartes perdus dans votre porte monnaye.
-      </p>
+      <h2 class="ui icon header">
+        <i class="teal money icon"></i>
+        <div class="content">
+          Gérez vos avoirs et vos cartes de fidélité
+          <div class="sub header">Pour ne plus avoir de petits papiers ni de cartes perdus dans votre porte monnaie.</div>
+        </div>
+      </h2>
       {{#unless isConnected}}
       <p>
         Vous devez d'abord vous connecter.
@@ -17,11 +20,16 @@
       {{/unless}}
     </div>
     <div class="ui stacked center aligned segment">
-      <h3>Commerçants, utilisez notre service.</h3>
+      <h2 class="ui icon header">
+        <i class="olive users icon"></i>
+        <div class="content">
+          Utilisez notre service pour votre commerce
+          <div class="sub header">C'est gratuit pour toujours.</div>
+        </div>
+      </h2>
       <p>
-        C'est gratuit pour toujours.
+        <button class="ui button" data-action="createPlace">Inscrivez votre commerce</button>
       </p>
-      <button class="ui button" data-action="createPlace">Inscrivez votre commerce</button>
     </div>
   </div>
 </template>
