--- a/client/templates/_comons/sidebar/sidebar_template.html
+++ b/client/templates/_comons/sidebar/sidebar_template.html
@@ -21,7 +21,7 @@
       </a>
       {{/if}}
     {{/if}}
-    <a class="item {{isActiveRoute 'vounchers'}}" href="{{pathFor 'vounchers'}}">
+    <a class="item {{isActiveRoute 'vouchers'}}" href="{{pathFor 'vouchers'}}">
       <i class="money icon"></i>
       Avoirs
     </a>
