--- a/client/templates/createPlace/createPlace_template.html
+++ b/client/templates/createPlace/createPlace_template.html
@@ -1,6 +1,14 @@
 <template name='createPlace'>
   <div class="ui container">
     <h2>Inscrivez votre commerce</h2>
-    {{> quickForm id="createPlace" type="insert" collection="Places" enctype="multipart/form-data" doc=this buttonContent="Enregistrer"}}
+    {{#autoForm id="createPlace" type="insert" collection="Places" enctype="multipart/form-data" doc=this}}
+      {{> afQuickField name="name"}}
+      {{> afQuickField name="description"}}
+      {{> afQuickField name="addresses.0.street"}}
+      {{> afQuickField name="addresses.0.zip"}}
+      {{> afQuickField name="addresses.0.city"}}
+      {{> afQuickField name="addresses.0.country"}}
+      <button class="fluid ui positive button" type="submit">Enregistrer</button>
+    {{/autoForm}}
   </div>
 </template>
