saturday morning sprint

--- a/client/templates/place/place_template.html
+++ b/client/templates/place/place_template.html
@@ -6,11 +6,11 @@
         <input type="checkbox" name="enabled" checked="{{enabled}}" data-action="enablePlace">
         <label>Commerce {{#unless enabled}}in{{/unless}}actif</label>
       </div>
-      <a href="{{pathFor 'placeEdit' placeId=_id}}" class="orange right floated ui circular icon button"><i class="pencil icon"></i></a>
+      <a href="{{pathFor 'placeEdit' placeId=_id}}" class="teal right floated ui circular icon button"><i class="pencil icon"></i></a>
       <div class="ui statistics">
         <div class="statistic">
           <div class="value">
-            22
+            42
           </div>
           <div class="label">
             Clients
