--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -1,8 +1,9 @@
 <template name='scanned'>
   <div class="ui container">
     {{#if isInRole 'owners'}}
-      <h3>{{customerEmail}}</h3>
-      <select class="ui dropdown">
+      <h3>Client : {{customerEmail}}</h3>
+      <h4>Commerce</h4>
+      <select class="ui dropdown" id="place">
         {{#each myPlaces}}
         <option value="{{_id}}" {{selectedPlace}}>{{name}}</option>
         {{/each}}
@@ -15,16 +16,17 @@
           Envoyer
         </button>
       </div>
-
+      {{#if place.loyaltyCard.enabled}}
       <h4>Carte de fidélité</h4>
-      <div class="ui labeled button" tabindex="0">
-        <div class="ui olive button">
-          <i class="star icon"></i> +1 point
-        </div>
+      <div class="ui left labeled button" tabindex="0">
         <a class="ui basic label">
-          7
+          <i class="star icon"></i> 7 / {{place.loyaltyCard.cardSize}}
         </a>
+        <div class="ui olive button">
+           +1 point
+        </div>
       </div>
+      {{/if}}
     {{/if}}
   </div>
 </template>
