--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -1,3 +1,16 @@
 <template name='loyaltyCards'>
-
+  <div class="ui container">
+    <h2>Mes cates de fidélité</h2>
+    <div class="ui list">
+      {{#each loyaltyCards}}
+      <div class="item">
+        <i class="large star icon"></i>
+        <div class="content">
+          <a class="header" href="{{pathFor 'place' placeId=placeId}}">{{name}}</a>
+          <div class="description">{{points}} point{{#if greaterThan points 1}}s{{/if}}</div>
+        </div>
+      </div>
+      {{/each}}
+    </div>
+  </div>
 </template>
