--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -11,11 +11,24 @@
       <h4>Avoir</h4>
       <div class="ui left icon action input">
         <i class="euro icon"></i>
-        <input type="number" step="any" placeholder="Montant de l'avoir" tabindex="1">
-        <button class="ui teal button">
+        <input type="number" step="any" placeholder="Montant de l'avoir" tabindex="1" id="voucherValue">
+        <button class="ui teal button" id="giveVoucher">
           Envoyer
         </button>
       </div>
+      <p>
+        <div class="ui horizontal link list">
+        {{#each vouchers}}
+          <div class="item">
+            <i class="large money icon"></i>
+            <div class="content">
+              <div class="header">{{formatMoney value}}</div>
+              {{fromNow createdAt}}
+            </div>
+          </div>
+        {{/each}}
+        </div>
+      </p>
       {{#if place.loyaltyCard.enabled}}
       <h4>Carte de fidélité</h4>
       <div class="ui left labeled button" tabindex="2">
