--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -19,7 +19,7 @@
       <p>
         <div class="ui horizontal link list">
         {{#each vouchers}}
-          <div class="item">
+          <div class="item" id="useVoucher">
             <i class="large money icon"></i>
             <div class="content">
               <div class="header">{{formatMoney value}}</div>
