tuesday morning sprint

--- a/client/templates/_comons/footer/footer_template.html
+++ b/client/templates/_comons/footer/footer_template.html
@@ -1,3 +1,13 @@
 <template name='footer'>
-	
+  <div class="ui bottom borderless menu">
+    <div class="header item">
+      mesavoirs.fr
+    </div>
+    <a class="item">
+      CGU
+    </a>
+    <a class="item">
+      Contact
+    </a>
+  </div>
 </template>
