--- a/client/templates/vouchers/vouchers_template.html
+++ b/client/templates/vouchers/vouchers_template.html
@@ -11,6 +11,16 @@
           Mis à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}
         </div>
       </div>
+      {{else}}
+      <div class="ui basic center aligned segment">
+        <h2 class="ui icon header">
+          <i class="teal money icon"></i>
+          <div class="content">
+            Vous n'avez pas encore d'avoirs
+            <div class="sub header">Cherchez l'affichette <strong>mesavoirs.fr</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
+          </div>
+        </h2>
+      </div>
       {{/each}}
     </div>
   </div>
