tuesday morning quick fix

--- a/client/templates/_comons/footer/footer_template.html
+++ b/client/templates/_comons/footer/footer_template.html
@@ -1,5 +1,5 @@
 <template name='footer'>
-  <div class="ui bottom borderless menu">
+  <!-- <div class="ui bottom borderless menu">
     <div class="header item">
       mesavoirs.fr
     </div>
@@ -9,5 +9,5 @@
     <a class="item">
       Contact
     </a>
-  </div>
+  </div> -->
 </template>
