--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -2,7 +2,7 @@
   <div class="ui main text container">
     <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
-        <i class="teal money icon"></i>
+        <i class="teal money icon" data-action="vouchers"></i>
         <div class="content">
           Gérez vos avoirs et vos cartes de fidélité
           <div class="sub header">Pour ne plus avoir de petits papiers ni de cartes perdus dans votre porte monnaie.</div>
@@ -12,7 +12,7 @@
     </div>
     <div class="ui raised center aligned segment">
       <h2 class="ui icon header">
-        <i class="yellow star icon"></i>
+        <i class="yellow star icon" data-action="loyaltyCards"></i>
         <div class="content">
           Utilisez notre service pour votre commerce
           <div class="sub header">C'est gratuit pour toujours.</div>
