--- a/client/templates/vouchers/vouchers_template.html
+++ b/client/templates/vouchers/vouchers_template.html
@@ -4,7 +4,7 @@
     <div class="ui relaxed divided list">
       {{#each vouchers}}
       <div class="item">
-        <i class="large money icon"></i>
+        <i class="large teal money icon"></i>
         <div class="content">
           <a class="header" href="{{pathFor 'place' placeId=placeId}}">{{name}}</a>
           <div class="description">{{formatMoney value}}</div>
