--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -1,6 +1,6 @@
 <template name='loyaltyCards'>
   <div class="ui container">
-    <h2>Mes cates de fidélité</h2>
+    <h2>Mes cartes de fidélité</h2>
     <div class="ui relaxed divided list">
       {{#each loyaltyCards}}
       <div class="item">
