--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -2,7 +2,7 @@
   <div class="ui container">
     {{#if isInRole 'owners'}}
       <h4>Commerce</h4>
-      <select class="ui dropdown" id="place" tabindex="0">
+      <select class="fluid ui dropdown" id="place" tabindex="0">
         {{#each myPlaces}}
         <option value="{{_id}}" {{selectedPlace}}>{{name}}</option>
         {{/each}}
@@ -10,7 +10,7 @@
 
       {{#if place.customers}}
       <h4>Clients</h4>
-      <select id="customer" name="customer" class="ui dropdown">
+      <select id="customer" name="customer" class="fluid ui dropdown">
         <option value="">Selectionnez un client</option>
         {{#each place.customers}}
           <option value="{{customerId}}" {{selectedCustomer}}>{{email}}</option>
@@ -18,7 +18,7 @@
       </select>
       {{/if}}
       {{#if customerEmail}}
-      <h3><i class="shop icon"></i> {{customerEmail}}</h3>
+      <h3><i class="blue pointing right icon"></i> {{customerEmail}}</h3>
       {{/if}}
       <h4>Avoir</h4>
       <div class="ui fluid left icon action input">
@@ -46,16 +46,16 @@
       </p>
       {{#if place.loyaltyCard.enabled}}
       <h4>Carte de fidélité</h4>
-      <div class="fluid ui left labeled button" tabindex="2">
+      <div class="fluid ui left labeled big button" tabindex="2">
         <a class="ui basic label">
-          <i class="yellow star icon"></i> {{userPoints}} / {{place.loyaltyCard.size}}
+          <i class="yellow star icon"></i> {{userPoints}} / {{place.loyaltyCard.size}} points
         </a>
         <div class="ui olive button" id="addOnePoint">
            +1 point
         </div>
       </div>
+      {{#if loyaltyCardDate}}<i class="time icon"></i> Mise à jour {{fromNow loyaltyCardDate}}<br>{{/if}}
       <p>
-        {{#if loyaltyCardDate}}<i class="time icon"></i> Mise à jour {{fromNow loyaltyCardDate}}<br>{{/if}}
         Chaque tranche d'achat de {{formatMoney place.loyaltyCard.pointCost}} ajoute 1 point à la carte de fidélité.<br>
         Quand la carte atteint {{place.loyaltyCard.size}} points, votre client reçoit automatiquement un avoir de {{formatMoney place.loyaltyCard.voucherValue}} et le compte de points est remis a zéro.
       </p>
