first mobile build

--- a/client/templates/_comons/sidebar/sidebar_template.html
+++ b/client/templates/_comons/sidebar/sidebar_template.html
@@ -11,7 +11,7 @@
     </a>
       {{#if isMobile}}
       <a class="item {{isActiveRoute 'scanned'}}" data-action="scan">
-        <i class="qr-code icon"></i>
+        <i class="qrcode icon"></i>
         Scan
       </a>
       {{else}}
