place search rising

--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -1,5 +1,11 @@
 <template name='home'>
   <div class="ui main text container">
+    <form id="search">
+      <div class="ui large fluid icon input">
+        <input type="text" placeholder="Commerce, ville, cp" id="searchQuery">
+        <i class="search icon"></i>
+      </div>
+    </form>
     <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
         <i class="teal money icon" data-action="vouchers"></i>
