--- a/client/templates/imageEdit/imageEdit_template.html
+++ b/client/templates/imageEdit/imageEdit_template.html
@@ -3,11 +3,11 @@
     <input type="file" name="imageFile" class="hidden" id="imageFile">
   </form>
   {{#if imageId}}
-    <button class="ui right floated icon button" data-action="deleteImage">
-      <i class="big red remove icon"></i>
+    <button class="ui right floated basic red icon button" data-action="deleteImage">
+      <i class="big remove icon"></i>
     </button>
   {{/if}}
-  <button class="ui right floated icon button" data-action="uploadImage">
+  <button class="ui right floated basic green icon button" data-action="uploadImage">
     <i class="big picture icon"></i>
   </button>
 </template>
