--- a/client/templates/place/place_template.html
+++ b/client/templates/place/place_template.html
@@ -69,7 +69,7 @@
             </div>
             {{#if myVoucher.histories}}
             <div class="extra">
-              <i class="time icon"></i>Voir historique
+              <i class="grey history icon"></i>Voir historique
             </div>
             {{/if}}
           </div>
@@ -90,7 +90,7 @@
             </div>
             {{#if myLoyaltyCard.histories}}
             <div class="extra">
-              <i class="time icon"></i>Voir historique
+              <i class="grey history icon"></i>Voir historique
             </div>
             {{/if}}
           </div>
