--- a/client/templates/histories/histories_template.html
+++ b/client/templates/histories/histories_template.html
@@ -1,12 +1,26 @@
 <template name='histories'>
-  <div class="ui modal histories-modal">
-    <div class="header">Historique</div>
+  <div class="ui fullscreen modal histories-modal">
+    <div class="actions">
+      <i class="grey history icon"></i>{{placeName}}
+      <div class="ui small basic green approve icon button"><i class="close icon"></i></div>
+    </div>
     <div class="content">
-      {{#each histories}}
-      <p>
-        <strong>{{plusSign what}}</strong> {{fromNow when}}
-      </p>
-      {{/each}}
+      <div class="ui feed">
+        {{#if histories}}
+        {{#each reverseArray histories}}
+        <div class="event">
+          <div class="content">
+            <div class="summary">
+              {{plusSign what}}
+              <div class="date">
+                {{fromNow when}}
+              </div>
+            </div>
+          </div>
+        </div>
+        {{/each}}
+        {{/if}}
+      </div>
     </div>
   </div>
 </template>
